[gd_scene load_steps=20 format=2]

[ext_resource path="res://script/Fist.gd" type="Script" id=1]
[ext_resource path="res://image/ROBO_left.png" type="Texture" id=2]
[ext_resource path="res://image/rocket_cloud.png" type="Texture" id=3]
[ext_resource path="res://image/ROBO_right.png" type="Texture" id=4]
[ext_resource path="res://sound/ブースター.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/魔王魂  爆発04.wav" type="AudioStream" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.00407332, 0.2375 ), 0.0, 1.5683, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.0102272 ), 0.0, 2.28372, 0, 0, Vector2( 0.604888, 0.892045 ), 0.0, 0.0, 0, 0, Vector2( 0.731161, 0.0556818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.108974, 0.217949, 0.418803, 0.690171, 0.897436 )
colors = PoolColorArray( 1, 0.963943, 0.734375, 1, 1, 0.797073, 0.484375, 1, 0.980957, 0.548914, 0, 1, 1, 0.308796, 0.152344, 1, 0.539551, 0.125364, 0.0316143, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
max_value = 200.0
_data = [ Vector2( 0, 200 ), 0.0, -2114.91, 0, 0, Vector2( 0.175153, -188.636 ), -2356.8, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 2, 1, 1 )
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
angular_velocity = 50.0
angular_velocity_random = 0.3
angular_velocity_curve = SubResource( 5 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 500.0
linear_accel_random = 0.15
linear_accel_curve = SubResource( 9 )
angle = 180.0
angle_random = 0.5
angle_curve = SubResource( 3 )
scale_random = 0.4
color_ramp = SubResource( 7 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="CircleShape2D" id=11]
radius = 6.07449

[sub_resource type="Animation" id=12]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "fire"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 2.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:texture_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.3, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.0156863, 0.815686, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="RightFist" type="Area2D" groups=[
"fist",
]]
use_parent_material = true
position = Vector2( 15, -0.6 )
rotation = 3.14159
collision_layer = 4
collision_mask = 480
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
material = SubResource( 1 )
position = Vector2( -11.8943, 0.237436 )
amount = 35
lifetime = 0.4
visibility_rect = Rect2( -10, -10, 20, 20 )
local_coords = false
draw_order = 1
process_material = SubResource( 10 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
rotation = 3.14159
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.784988, 0.56245 )
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 12 )
anims/fire = SubResource( 13 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.8

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.65

[connection signal="area_entered" from="." to="." method="_on_RightFist_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Hand_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
